--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Dimpsey Somerset Gin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
     
     <!-- Custom styles for this template -->
     <link href="dimpsey.css" rel="stylesheet">
@@ -149,7 +150,8 @@
       </footer>
     </main>
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
     <script type="application/javascript">
       function changeImage(size) {
