Some responsive updates

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
 
       <div class="animated-illustration">
-          <img alt="Dimpsey Somerset Gin illustration" src="./images/main.png" />
+          <img class="img-fluid" alt="Dimpsey Somerset Gin illustration" src="./images/main.png" />
       </div>
 
       <hr class="featurette-divider">
@@ -70,7 +70,7 @@
                 <img class="thumbnail five-cl" alt="5cl bottle of Dimpsey Somerset Gin" src="./images/five.png" />
                 5cl
               </label>
-            </div><!-- /.col-lg-2 thumbnails -->
+            </div><!-- /.col-lg-1 thumbnails -->
 
             <div class="col-lg-6 main-image">
               <img class="seventy-cl-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
@@ -133,7 +133,7 @@
             </div><!-- /.col-lg-6 distillery-description -->
 
             <div class="col-lg-5 distillery-image">
-              <img alt="The Still Shed Distillery logo" src="./images/stillshed.png" />
+              <img class="img-fluid" alt="The Still Shed Distillery logo" src="./images/stillshed.png" />
             </div>
 
           </div>
