Adding node_modules back in for fun and some styles

--- a/index.html
+++ b/index.html
@@ -99,19 +99,22 @@
               <p>Best enjoyed as a gin and tonic. Fill a glass with lots of ice, top with a premium tonic and a curl of pink grapefruit
                 or mandarin peel to garnish.</p>
 
-              <form>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="seventyClRadio" value="seventyCl" onchange="changeImage('seventy')" checked>
-                  <label class="form-check-label" for="seventyClRadio"><strong>£35</strong> <small>70cl</small></label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="fiveClRadio" value="fiveCl" onchange="changeImage('five')">
-                  <label class="form-check-label" for="fiveClRadio"><strong>£6</strong> <small>5cl</small></label>
-                </div>
-              </form>
-              <p>Free UK shipping on orders over £50</p>
-              <button type="submit" class="btn btn-primary mb-2">ADD TO BASKET</button>
-              <button type="submit" class="btn btn-secondary mb-2">BUY NOW</button>
+              <div class="description volume-selection-buy-buttons">
+                <form>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="seventyClRadio" value="seventyCl" onchange="changeImage('seventy')" checked>
+                    <label class="form-check-label" for="seventyClRadio"><strong>£35</strong> <small>70cl</small></label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="fiveClRadio" value="fiveCl" onchange="changeImage('five')">
+                    <label class="form-check-label" for="fiveClRadio"><strong>£6</strong> <small>5cl</small></label>
+                  </div>
+                </form>
+
+                <p>Free UK shipping on orders over £50</p>
+                <button type="submit" class="btn btn-primary mb-2">ADD TO BASKET</button>
+                <button type="submit" class="btn btn-secondary mb-2">BUY NOW</button>
+              </div>
             </div><!-- /.col-lg-4 description -->
           </div><!-- /.row -->
         </div><!-- /.marketing -->
