Some changes to the buy button

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   Shopify button for 700ml Dimpsey
                   -->
 
-                  <div id='product-component-1629197076329'></div>
+                  <div id='product-component-1629237356069'></div>
                   <script type="text/javascript">
                     /*<![CDATA[*/
                     (function () {
@@ -149,7 +149,7 @@
                           ui.createComponent('product', {
                             id: '7009929461922',
                             variantId: '40636439658658',
-                            node: document.getElementById('product-component-1629197076329'),
+                            node: document.getElementById('product-component-1629237356069'),
                             moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
                             options: {
                               "product": {
@@ -162,9 +162,26 @@
                                     }
                                   },
                                   "button": {
-                                    "border-radius": "19px",
-                                    "padding-left": "39px",
-                                    "padding-right": "39px"
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000",
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "background-color": "#f5ae20",
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "border-radius": "0px",
+                                    "padding-left": "41px",
+                                    "padding-right": "41px"
+                                  },
+                                  "quantityInput": {
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px"
                                   }
                                 },
                                 "contents": {
@@ -176,7 +193,7 @@
                                   "options": false
                                 },
                                 "text": {
-                                  "button": "Add to Basket"
+                                  "button": "Pre-order (due 06/08)"
                                 }
                               },
                               "productSet": {
@@ -204,9 +221,26 @@
                                     }
                                   },
                                   "button": {
-                                    "border-radius": "19px",
-                                    "padding-left": "39px",
-                                    "padding-right": "39px"
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000",
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "background-color": "#f5ae20",
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "border-radius": "0px",
+                                    "padding-left": "41px",
+                                    "padding-right": "41px"
+                                  },
+                                  "quantityInput": {
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px"
                                   }
                                 },
                                 "text": {
@@ -217,7 +251,19 @@
                               "cart": {
                                 "styles": {
                                   "button": {
-                                    "border-radius": "19px"
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000",
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "background-color": "#f5ae20",
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "border-radius": "0px"
                                   },
                                   "title": {
                                     "color": "#000000"
@@ -279,7 +325,29 @@
                                 },
                                 "popup": false
                               },
-                              "toggle": {},
+                              "toggle": {
+                                "styles": {
+                                  "toggle": {
+                                    "background-color": "#f5ae20",
+                                    ":hover": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    }
+                                  },
+                                  "count": {
+                                    "font-size": "14px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000"
+                                    }
+                                  },
+                                  "iconPath": {
+                                    "fill": "#000000"
+                                  }
+                                }
+                              },
                               "lineItem": {
                                 "styles": {
                                   "variantTitle": {
@@ -336,7 +404,7 @@
                     Start button for Dimpsey 50ml
                   -->
 
-                  <div id='product-component-1629197110846'></div>
+                  <div id='product-component-1629237402499'></div>
                   <script type="text/javascript">
                     /*<![CDATA[*/
                     (function () {
@@ -366,7 +434,7 @@
                           ui.createComponent('product', {
                             id: '7009929461922',
                             variantId: '40636439691426',
-                            node: document.getElementById('product-component-1629197110846'),
+                            node: document.getElementById('product-component-1629237402499'),
                             moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
                             options: {
                               "product": {
@@ -379,9 +447,26 @@
                                     }
                                   },
                                   "button": {
-                                    "border-radius": "19px",
-                                    "padding-left": "39px",
-                                    "padding-right": "39px"
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000",
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "background-color": "#f5ae20",
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "border-radius": "0px",
+                                    "padding-left": "41px",
+                                    "padding-right": "41px"
+                                  },
+                                  "quantityInput": {
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px"
                                   }
                                 },
                                 "contents": {
@@ -393,7 +478,7 @@
                                   "options": false
                                 },
                                 "text": {
-                                  "button": "Add to Basket"
+                                  "button": "Pre-order (due 06/08)"
                                 },
                                 "variantId": "40636439691426"
                               },
@@ -422,9 +507,26 @@
                                     }
                                   },
                                   "button": {
-                                    "border-radius": "19px",
-                                    "padding-left": "39px",
-                                    "padding-right": "39px"
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000",
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "background-color": "#f5ae20",
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "border-radius": "0px",
+                                    "padding-left": "41px",
+                                    "padding-right": "41px"
+                                  },
+                                  "quantityInput": {
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px"
                                   }
                                 },
                                 "text": {
@@ -435,7 +537,19 @@
                               "cart": {
                                 "styles": {
                                   "button": {
-                                    "border-radius": "19px"
+                                    "font-size": "14px",
+                                    "padding-top": "15px",
+                                    "padding-bottom": "15px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000",
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "background-color": "#f5ae20",
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    "border-radius": "0px"
                                   },
                                   "title": {
                                     "color": "#000000"
@@ -497,7 +611,29 @@
                                 },
                                 "popup": false
                               },
-                              "toggle": {},
+                              "toggle": {
+                                "styles": {
+                                  "toggle": {
+                                    "background-color": "#f5ae20",
+                                    ":hover": {
+                                      "background-color": "#dd9d1d"
+                                    },
+                                    ":focus": {
+                                      "background-color": "#dd9d1d"
+                                    }
+                                  },
+                                  "count": {
+                                    "font-size": "14px",
+                                    "color": "#000000",
+                                    ":hover": {
+                                      "color": "#000000"
+                                    }
+                                  },
+                                  "iconPath": {
+                                    "fill": "#000000"
+                                  }
+                                }
+                              },
                               "lineItem": {
                                 "styles": {
                                   "variantTitle": {
@@ -547,9 +683,7 @@
                     End button for Dimpsey 50ml
                   -->
 
-              </div><!-- /.fifty-button -->
-
-                <p><strong>This is a pre-order. Orders will be shipped Monday 6th September</strong></p>
+                </div><!-- /.fifty-button -->
 
               </div><!-- /.col-lg-4 description -->
             </div><!-- /.description -->
@@ -626,7 +760,7 @@
               <p>Our distillery's location is as rural as the taste of our Somerset gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
                 our copper pot stills, using only the finest, locally foraged botanicals - most of which we grow ourselves!</p>
 
-              <p>If you'd like to know more about us or our distillery, check out the Still Shed website!</p>
+              <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed</a> website!</p>
 
             </div><!-- /.col-lg-6 distillery-description -->
 
@@ -644,7 +778,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2021 Still Shed Distillery Limited &middot; <a href="#">Still Shed</a> &middot; <a href="#">Privacy</a></p>
+        <p>&copy; 2021 Still Shed Distillery Limited &middot; <a href="https://stillshed.co.uk">Still Shed</a> &middot; <a href="#">Privacy</a></p>
       </footer>
     </main>
 
