Updates to text and a few meta tags and stuff

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dimpsey Somerset Gin">
+    <meta name="description" content="Dimpsey Somerset Gin is distilled in traditional copper stills, using locally foraged botanicals and Cheddar spring water">
     <meta name="author" content="Tommy">
     <title>Dimpsey Somerset Gin</title>
+    <link rel="canonical" href="https://dimpseygin.co.uk" />
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org/",
@@ -71,8 +73,8 @@
 
         <div id="theGin" class="container quote">
           <blockquote class="blockquote text-center">
-            <p>Distilled in copper pot stills just before Dimpsey - that’s old Somerset for sunset - at the foot of the Mendip Hills, <br />
-              using locally foraged botanicals and Cheddar spring water, <br /> this is Somerset Gin.</p>
+            <p>Using traditional copper pot stills, just before Dimpsey (that’s old Somerset for sunset), at the foot of the Mendip Hills, <br />
+              using locally foraged botanicals and Cheddar spring water, this is <br />  Dimpsey Somerset Gin.</p>
           </blockquote>
         </div>
 
@@ -700,10 +702,10 @@
                   </div><!-- /.fifty-button -->
                   <p><strong>£5</strong> <small>50ml</small></p>
 
-                </div><!-- /.shopify-buy-buttons -->
+                  <p>Free UK shipping on orders over £50</p>
+                  <p>Local pick-up from the Still Shed Distillery is available</p>
 
-                <p>Free UK shipping on orders over £50</p>
-                <p>Local pick-up from the Still Shed Distillery is available</p>
+                </div><!-- /.shopify-buy-buttons -->
 
               </div><!-- /.col-lg-4 description -->
             </div><!-- /.description -->
